--- a/PTI/index.html
+++ b/PTI/index.html
@@ -51,10 +51,10 @@
 
         </div>
         <!-- section2 -->
-        <section class="container-parrallax">
+        <section class="container-parrallax" id="sec">
             <div class="parralax"></div>
 
-            <div class="list-container" id="sec">
+            <div class="list-container">
                 <ul class="item">
                     <li><a href="#sec1" id="left">Tujuan</a></li>
                     <li><a href="#sec2" id="middle">Pencapaian</a></li>
@@ -62,8 +62,8 @@
                 </ul>
             </div>
         </section>
-        <section class="container-parrallax1">
-            <div class="list-container1" id="sec1">
+        <section class="container-parrallax1" id="sec1">
+            <div class="list-container1">
                 <ul class="Mission">
                     <li>Visi : Menjadi Universitas unggul berbasis keislaman dan teknologi untuk kemaslahatan masyarakat
                         Indonesia dan global
@@ -90,14 +90,14 @@
                         Universitas Perguruan Tinggi.
                     </li>
                 </ul>
-                <div class="back"><a href="#sec"><img src="asset/img/9727765_26859-preview.png" alt=""></a>
-                </div>
+            </div>
+            <div class="back"><a href="#sec"><img src="asset/img/left.png"></a>
             </div>
         </section>
         <section class="container-parrallax">
             <div class="parralax"></div>
 
-            <div class="list-container" id="sec">
+            <div class="list-container" id="sec3">
                 <ul class="item">
                     <li><a href="#sec1" id="left">Tujuan</a></li>
                     <li><a href="#sec2" id="middle">Pencapaian</a></li>
