--- a/PTI/index.html
+++ b/PTI/index.html
@@ -57,7 +57,7 @@
             <div class="list-container">
                 <ul class="item">
                     <li><a href="#sec1" id="left">Tujuan</a></li>
-                    <li><a href="#sec2" id="middle">Pencapaian</a></li>
+                    <li><a href="#sec2" id="middle">Jenjang Pendidikan</a></li>
                     <li><a href="#sec3" id="right">Info</a></li>
                 </ul>
             </div>
@@ -65,9 +65,13 @@
         <section class="container-parrallax1" id="sec1">
             <div class="list-container1">
                 <ul class="Mission">
-                    <li>Visi : Menjadi Universitas unggul berbasis keislaman dan teknologi untuk kemaslahatan masyarakat
+                    <li class="visi">Visi : Menjadi Universitas unggul berbasis keislaman dan teknologi untuk
+                        kemaslahatan
+                        masyarakat
                         Indonesia dan global
-                        Misi :
+
+                    </li>
+                    <li class="misi">Misi :
                         Menyelenggarakan program pendidikan tinggi yang unggul berbasis nilai-nilai keislaman dan
                         penerapan teknologi;
                         Mengembangkan ilmu pengetahuan, teknologi dan seni untuk kesejahteraan masyarakat sebagai
@@ -75,8 +79,8 @@
                         Islam serta;
                         Mengembangkan kerjasama dalam lingkup Nasional, Regional, dan Internasional dalam pelaksanaan
                         program catur dharma
-                        Universitas Perguruan Tinggi.
-                        Tujuan :
+                        Universitas Perguruan Tinggi.</li>
+                    <li class="tujuan">Tujuan :
                         Menjadi Universitas Islam yang memiliki keunggulan dalam proses pembelajaran, penelitian dan
                         pengabdian kepada
                         masyarakat yang berbasis nilai-nilai keislaman dan penerapan teknologi;
@@ -87,28 +91,72 @@
                         dengan ajaran Islam, dan;
                         Terjalinnya kerjasama dalam lingkup nasional, regional, dan internasional dalam pelaksanaan
                         program Caturdharma
-                        Universitas Perguruan Tinggi.
-                    </li>
+                        Universitas Perguruan Tinggi.</li>
                 </ul>
-            </div>
-            <div class="back"><a href="#sec"><img src="asset/img/left.png"></a>
+                <a href="#sec" class="back">X</a>
             </div>
         </section>
-        <section class="container-parrallax">
-            <div class="parralax"></div>
-
-            <div class="list-container" id="sec3">
+        <section class="container-parrallax2" id="sec2">
+            <div class="list-container2">
                 <ul class="item">
-                    <li><a href="#sec1" id="left">Tujuan</a></li>
-                    <li><a href="#sec2" id="middle">Pencapaian</a></li>
-                    <li><a href="#sec3" id="right">Info</a></li>
+                    <li><a href="#sec1" id="left">JENJANG PENDIDIKAN
+                            Diploma 3 (D3) : 1. Keuangan & Perbankan (Fakultas Ekonomi)
+
+                            Sarjana (S1) :
+                            A. Fakultas Keguruan dan Ilmu Pendidikan
+                            Pendidikan Bahasa Inggris
+                            Pendidikan Luar Sekolah
+                            Teknologi Pendidikan
+                            Pendidikan Vokasional Desain Fashion
+                            Pendidikan Profesi Guru
+                            Teknologi Pendidikan
+                            B. Fakultas Hukum
+                            Ilmu Hukum
+                            C. Fakultas Ekonomi dan Bisnis
+                            Manajemen
+                            Akuntansi
+                            Bisnis Digital
+                            Perdagangan Internasional
+                            D. Fakultas Agama Islam
+                            Pendidikan Agama Islam
+                            Komunikasi Penyiaran Islam
+                            Ekonomi Syariah
+                            Manajemen Haji dan Umrah
+                            Ilmu Al-Qur`an dan Tafsir
+                            Bimbingan Konseling Pendidikan Islam
+                            Pendidikan Guru Madrasah Ibtidaiyah
+                            E. Fakultas Teknik dan Sains
+                            Teknik Mesin
+                            Teknik Elektro
+                            Teknik Sipil
+                            Teknik Informatika
+                            Sistem Informasi
+                            Rekayasa Pertanian dan Biosistem
+                            Ilmu Lingkungan
+                            Sistem Informasi
+                            F. Fakultas Ilmu Kesehatan
+                            Kesehatan Masyarakat
+                            Ilmu Gizi
+
+                            Pascasarjana (S2) :
+                            Pendidikan Islam
+                            Ekonomi Syariah
+                            Manajemen
+                            Teknologi Pendidikan
+                            Hukum Bisnis
+
+                            Doktor (S3) :
+                            Pendidikan Islam
+                            Ekonomi Syariah
+                        </a></li>
                 </ul>
+                <a href="#sec" class="back2">X</a>
             </div>
         </section>
-        <section class="container-parrallax">
+        <section class="container-parrallax3" id="sec3">
             <div class="parralax"></div>
 
-            <div class="list-container" id="sec">
+            <div class="list-container">
                 <ul class="item">
                     <li><a href="#sec1" id="left">Tujuan</a></li>
                     <li><a href="#sec2" id="middle">Pencapaian</a></li>
