--- a/PTI/index.html
+++ b/PTI/index.html
@@ -98,57 +98,62 @@
         </section>
         <section class="container-parrallax2" id="sec2">
             <div class="list-container2">
+                <h1> JENJANG PENDIDIKAN</h1>
                 <ul class="item">
-                    <li><a href="#sec1" id="left">JENJANG PENDIDIKAN
-                            Diploma 3 (D3) : 1. Keuangan & Perbankan (Fakultas Ekonomi)
-
-                            Sarjana (S1) :
-                            A. Fakultas Keguruan dan Ilmu Pendidikan
-                            Pendidikan Bahasa Inggris
-                            Pendidikan Luar Sekolah
-                            Teknologi Pendidikan
-                            Pendidikan Vokasional Desain Fashion
-                            Pendidikan Profesi Guru
-                            Teknologi Pendidikan
-                            B. Fakultas Hukum
-                            Ilmu Hukum
-                            C. Fakultas Ekonomi dan Bisnis
-                            Manajemen
-                            Akuntansi
-                            Bisnis Digital
-                            Perdagangan Internasional
-                            D. Fakultas Agama Islam
-                            Pendidikan Agama Islam
-                            Komunikasi Penyiaran Islam
-                            Ekonomi Syariah
-                            Manajemen Haji dan Umrah
-                            Ilmu Al-Qur`an dan Tafsir
-                            Bimbingan Konseling Pendidikan Islam
-                            Pendidikan Guru Madrasah Ibtidaiyah
-                            E. Fakultas Teknik dan Sains
-                            Teknik Mesin
-                            Teknik Elektro
-                            Teknik Sipil
-                            Teknik Informatika
-                            Sistem Informasi
-                            Rekayasa Pertanian dan Biosistem
-                            Ilmu Lingkungan
-                            Sistem Informasi
-                            F. Fakultas Ilmu Kesehatan
-                            Kesehatan Masyarakat
-                            Ilmu Gizi
-
-                            Pascasarjana (S2) :
-                            Pendidikan Islam
-                            Ekonomi Syariah
-                            Manajemen
-                            Teknologi Pendidikan
-                            Hukum Bisnis
-
-                            Doktor (S3) :
-                            Pendidikan Islam
-                            Ekonomi Syariah
-                        </a></li>
+                    <li class="diploma">
+                        Diploma 3 (D3) :<br>
+                        Keuangan & Perbankan (Fakultas Ekonomi)<br>
+                    </li>
+                    <li class="sarjana">
+                        Sarjana (S1) :<br>
+                        A. Fakultas Keguruan dan Ilmu Pendidikan<br>
+                        -Pendidikan Bahasa Inggris<br>
+                        -Pendidikan Luar Sekolah<br>
+                        -Teknologi Pendidikan<br>
+                        -Pendidikan Vokasional Desain Fashion<br>
+                        -Pendidikan Profesi Guru<br>
+                        -Teknologi Pendidikan<br>
+                        B. Fakultas Hukum<br>
+                        -Ilmu Hukum<br>
+                        C. Fakultas Ekonomi dan Bisnis<br>
+                        -Manajemen<br>
+                        -Akuntansi<br>
+                        -Bisnis Digital<br>
+                        -Perdagangan Internasional<br>
+                        D. Fakultas Agama Islam<br>
+                        -Pendidikan Agama Islam<br>
+                        -Komunikasi Penyiaran Islam<br>
+                        -Ekonomi Syariah<br>
+                        -Manajemen Haji dan Umrah<br>
+                        -Ilmu Al-Qur`an dan Tafsir<br>
+                        -Bimbingan Konseling Pendidikan Islam<br>
+                        -Pendidikan Guru Madrasah Ibtidaiyah<br>
+                        E. Fakultas Teknik dan Sains<br>
+                        -Teknik Mesin<br>
+                        -Teknik Elektro<br>
+                        -Teknik Sipil<br>
+                        -Teknik Informatika<br>
+                        -Sistem Informasi<br>
+                        -Rekayasa Pertanian dan Biosistem<br>
+                        -Ilmu Lingkungan<br>
+                        -Sistem Informasi<br>
+                        F. Fakultas Ilmu Kesehatan<br>
+                        -Kesehatan Masyarakat<br>
+                        -Ilmu Gizi
+                    </li>
+                    <li class="pascasarjana">
+                        Pascasarjana (S2) :<br>
+                        Pendidikan Islam<br>
+                        Ekonomi Syariah<br>
+                        Manajemen<br>
+                        Teknologi Pendidikan<br>
+                        Hukum Bisnis<br>
+                    </li>
+                    <li class="doktor">
+                        Doktor (S3) : <br>
+                        Pendidikan Islam<br>
+                        Ekonomi Syariah<br>
+                    </li>
                 </ul>
                 <a href="#sec" class="back2">X</a>
             </div>
@@ -156,11 +161,9 @@
         <section class="container-parrallax3" id="sec3">
             <div class="parralax"></div>
 
-            <div class="list-container">
+            <div class="list-container3">
                 <ul class="item">
-                    <li><a href="#sec1" id="left">Tujuan</a></li>
-                    <li><a href="#sec2" id="middle">Pencapaian</a></li>
-                    <li><a href="#sec3" id="right">Info</a></li>
+                    <li></li>
                 </ul>
             </div>
         </section>
