--- a/PTI/index.html
+++ b/PTI/index.html
@@ -159,12 +159,13 @@
             </div>
         </section>
         <section class="container-parrallax3" id="sec3">
-            <div class="parralax"></div>
+            <!-- <div class="parralax"></div> -->
 
             <div class="list-container3">
                 <ul class="item">
                     <li></li>
                 </ul>
+                <a href="#sec" class="back3">X</a>
             </div>
         </section>
 
